[package]
name = "network"
version = "0.1.0"
authors = ["grub <grub.xy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
futures-util = "0.3.12"
tokio = { version = "1.3.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.4"
tokio-util = { version = "0.6.4", features = ["compat", "codec"] }
serde={version="1.0.124",default-features=false}
serde_json="1.0.64"
serde_bytes="0.11.5"
